base.core/src/main/java/eapli/base/antlr/formulario/ScriptValidacaoParser.java
// Generated from C:/Users/Rui/Desktop/Uni/2º Ano/2º Semestre/DSource/base.core/src/main/java/eapli/base/antlr/formulario\ScriptValidacao.g4 by ANTLR 4.9.1
package eapli.base.antlr.formulario;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ScriptValidacaoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, EstadoString=11, OperadorLogico=12, ValorBool=13, IgualOuDiferente=14, 
		OperadorCondicao=15, TipoOpcao=16, OperadorMatematico=17, Obrigatoriedade=18, 
		String=19, Inteiro=20, WS=21;
	public static final int
		RULE_prog = 0, RULE_verificacaoIf = 1, RULE_conteudo = 2, RULE_config = 3, 
		RULE_conteudocondicoes = 4, RULE_condicoes = 5, RULE_condicao = 6, RULE_compararValores = 7, 
		RULE_condicaoString = 8, RULE_stringEntreAspas = 9, RULE_valorString = 10, 
		RULE_expressaoIntLiteral = 11, RULE_expressaoIntDados = 12, RULE_decimal = 13, 
		RULE_intervalo = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "verificacaoIf", "conteudo", "config", "conteudocondicoes", "condicoes", 
			"condicao", "compararValores", "condicaoString", "stringEntreAspas", 
			"valorString", "expressaoIntLiteral", "expressaoIntDados", "decimal", 
			"intervalo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'then'", "';'", "'$'", "'tamanho e'", "'esta entre'", 
			"'e'", "':'", "'\"'", "'.decimal'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "EstadoString", 
			"OperadorLogico", "ValorBool", "IgualOuDiferente", "OperadorCondicao", 
			"TipoOpcao", "OperadorMatematico", "Obrigatoriedade", "String", "Inteiro", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ScriptValidacao.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ScriptValidacaoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public VerificacaoIfContext verificacaoIf() {
			return getRuleContext(VerificacaoIfContext.class,0);
		}
		public ConfigContext config() {
			return getRuleContext(ConfigContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoVisitor ) return ((ScriptValidacaoVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		return prog(0);
	}

	private ProgContext prog(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ProgContext _localctx = new ProgContext(_ctx, _parentState);
		ProgContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_prog, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			}
			_ctx.stop = _input.LT(-1);
			setState(37);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(35);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						_localctx = new ProgContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_prog);
						setState(31);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(32);
						verificacaoIf();
						}
						break;
					case 2:
						{
						_localctx = new ProgContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_prog);
						setState(33);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(34);
						config();
						}
						break;
					}
					} 
				}
				setState(39);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class VerificacaoIfContext extends ParserRuleContext {
		public CondicoesContext condicoes() {
			return getRuleContext(CondicoesContext.class,0);
		}
		public ConteudoContext conteudo() {
			return getRuleContext(ConteudoContext.class,0);
		}
		public VerificacaoIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_verificacaoIf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).enterVerificacaoIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).exitVerificacaoIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoVisitor ) return ((ScriptValidacaoVisitor<? extends T>)visitor).visitVerificacaoIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VerificacaoIfContext verificacaoIf() throws RecognitionException {
		VerificacaoIfContext _localctx = new VerificacaoIfContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_verificacaoIf);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(T__0);
			setState(41);
			condicoes(0);
			setState(42);
			match(T__1);
			setState(43);
			conteudo(0);
			setState(44);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConteudoContext extends ParserRuleContext {
		public ConteudocondicoesContext conteudocondicoes() {
			return getRuleContext(ConteudocondicoesContext.class,0);
		}
		public ConfigContext config() {
			return getRuleContext(ConfigContext.class,0);
		}
		public VerificacaoIfContext verificacaoIf() {
			return getRuleContext(VerificacaoIfContext.class,0);
		}
		public ConteudoContext conteudo() {
			return getRuleContext(ConteudoContext.class,0);
		}
		public ConteudoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conteudo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).enterConteudo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).exitConteudo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoVisitor ) return ((ScriptValidacaoVisitor<? extends T>)visitor).visitConteudo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConteudoContext conteudo() throws RecognitionException {
		return conteudo(0);
	}

	private ConteudoContext conteudo(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ConteudoContext _localctx = new ConteudoContext(_ctx, _parentState);
		ConteudoContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_conteudo, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(47);
				conteudocondicoes();
				}
				break;
			case 2:
				{
				setState(48);
				config();
				}
				break;
			case 3:
				{
				setState(49);
				verificacaoIf();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(60);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(58);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new ConteudoContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_conteudo);
						setState(52);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(53);
						conteudocondicoes();
						}
						break;
					case 2:
						{
						_localctx = new ConteudoContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_conteudo);
						setState(54);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(55);
						config();
						}
						break;
					case 3:
						{
						_localctx = new ConteudoContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_conteudo);
						setState(56);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(57);
						verificacaoIf();
						}
						break;
					}
					} 
				}
				setState(62);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ConfigContext extends ParserRuleContext {
		public ConfigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config; }
	 
		public ConfigContext() { }
		public void copyFrom(ConfigContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ValueEObrigadorioContext extends ConfigContext {
		public TerminalNode Inteiro() { return getToken(ScriptValidacaoParser.Inteiro, 0); }
		public TerminalNode Obrigatoriedade() { return getToken(ScriptValidacaoParser.Obrigatoriedade, 0); }
		public ValueEObrigadorioContext(ConfigContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).enterValueEObrigadorio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).exitValueEObrigadorio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoVisitor ) return ((ScriptValidacaoVisitor<? extends T>)visitor).visitValueEObrigadorio(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValueTamanhoContext extends ConfigContext {
		public List<TerminalNode> Inteiro() { return getTokens(ScriptValidacaoParser.Inteiro); }
		public TerminalNode Inteiro(int i) {
			return getToken(ScriptValidacaoParser.Inteiro, i);
		}
		public ValueTamanhoContext(ConfigContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).enterValueTamanho(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).exitValueTamanho(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoVisitor ) return ((ScriptValidacaoVisitor<? extends T>)visitor).visitValueTamanho(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValueEstaEntreContext extends ConfigContext {
		public TerminalNode Inteiro() { return getToken(ScriptValidacaoParser.Inteiro, 0); }
		public IntervaloContext intervalo() {
			return getRuleContext(IntervaloContext.class,0);
		}
		public ValueEstaEntreContext(ConfigContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).enterValueEstaEntre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).exitValueEstaEntre(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoVisitor ) return ((ScriptValidacaoVisitor<? extends T>)visitor).visitValueEstaEntre(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValueVerificarIgualOuDiferenteContext extends ConfigContext {
		public CompararValoresContext compararValores() {
			return getRuleContext(CompararValoresContext.class,0);
		}
		public ValueVerificarIgualOuDiferenteContext(ConfigContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).enterValueVerificarIgualOuDiferente(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).exitValueVerificarIgualOuDiferente(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoVisitor ) return ((ScriptValidacaoVisitor<? extends T>)visitor).visitValueVerificarIgualOuDiferente(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DecimalVerificarIgualOuDiferenteContext extends ConfigContext {
		public DecimalContext decimal() {
			return getRuleContext(DecimalContext.class,0);
		}
		public TerminalNode Inteiro() { return getToken(ScriptValidacaoParser.Inteiro, 0); }
		public TerminalNode OperadorLogico() { return getToken(ScriptValidacaoParser.OperadorLogico, 0); }
		public TerminalNode IgualOuDiferente() { return getToken(ScriptValidacaoParser.IgualOuDiferente, 0); }
		public DecimalVerificarIgualOuDiferenteContext(ConfigContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).enterDecimalVerificarIgualOuDiferente(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).exitDecimalVerificarIgualOuDiferente(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoVisitor ) return ((ScriptValidacaoVisitor<? extends T>)visitor).visitDecimalVerificarIgualOuDiferente(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConfigContext config() throws RecognitionException {
		ConfigContext _localctx = new ConfigContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_config);
		int _la;
		try {
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new ValueTamanhoContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				match(T__3);
				setState(64);
				match(Inteiro);
				setState(65);
				match(T__4);
				setState(66);
				match(Inteiro);
				setState(67);
				match(T__2);
				}
				break;
			case 2:
				_localctx = new ValueEstaEntreContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				match(T__3);
				setState(69);
				match(Inteiro);
				setState(70);
				match(T__5);
				setState(71);
				intervalo();
				setState(72);
				match(T__2);
				}
				break;
			case 3:
				_localctx = new ValueEObrigadorioContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				match(T__3);
				setState(75);
				match(Inteiro);
				setState(76);
				match(T__6);
				setState(77);
				match(Obrigatoriedade);
				setState(78);
				match(T__2);
				}
				break;
			case 4:
				_localctx = new ValueVerificarIgualOuDiferenteContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(79);
				compararValores();
				}
				break;
			case 5:
				_localctx = new DecimalVerificarIgualOuDiferenteContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(80);
				decimal();
				setState(81);
				_la = _input.LA(1);
				if ( !(_la==OperadorLogico || _la==IgualOuDiferente) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(82);
				match(Inteiro);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConteudocondicoesContext extends ParserRuleContext {
		public CondicoesContext condicoes() {
			return getRuleContext(CondicoesContext.class,0);
		}
		public ConteudocondicoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conteudocondicoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).enterConteudocondicoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).exitConteudocondicoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoVisitor ) return ((ScriptValidacaoVisitor<? extends T>)visitor).visitConteudocondicoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConteudocondicoesContext conteudocondicoes() throws RecognitionException {
		ConteudocondicoesContext _localctx = new ConteudocondicoesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_conteudocondicoes);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			condicoes(0);
			setState(87);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicoesContext extends ParserRuleContext {
		public CondicoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicoes; }
	 
		public CondicoesContext() { }
		public void copyFrom(CondicoesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CondicoesSemOperadorContext extends CondicoesContext {
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public CondicoesSemOperadorContext(CondicoesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).enterCondicoesSemOperador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).exitCondicoesSemOperador(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoVisitor ) return ((ScriptValidacaoVisitor<? extends T>)visitor).visitCondicoesSemOperador(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CondicoesOperadorContext extends CondicoesContext {
		public CondicoesContext condicoes() {
			return getRuleContext(CondicoesContext.class,0);
		}
		public TerminalNode OperadorCondicao() { return getToken(ScriptValidacaoParser.OperadorCondicao, 0); }
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public CondicoesOperadorContext(CondicoesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).enterCondicoesOperador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoListener ) ((ScriptValidacaoListener)listener).exitCondicoesOperador(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoVisitor ) return ((ScriptValidacaoVisitor<? extends T>)visitor).visitCondicoesOperador(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicoesContext condicoes() throws RecognitionException {
		return condicoes(0);
	}

	private CondicoesContext condicoes(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		CondicoesContext _localctx = new CondicoesContext(_ctx, _parentState);
		CondicoesContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_condicoes, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new CondicoesSemOperadorContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(90);
			condicao();
			}
			_ctx.stop = _input.LT(-1);
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new CondicoesOperadorContext(new CondicoesContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_condicoes);
					setState(92);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(93);
					match(OperadorCondicao);
					setState(94);
					condicao();
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
